# Game-Boy-Advance-Emulator

./: .gitignore  CMakeLists.txt  README.md
include/: types.hpp
src/: gba.cpp  gba.hpp  main.cpp
src/apu/: apu.cpp  apu.hpp
src/bios/: hle_bios.cpp  hle_bios.hpp
src/cheat/: cheat.cpp  cheat.hpp
src/cpu/: arm7tdmi.cpp  arm7tdmi.hpp  arm_instructions.cpp  arm_instructions.hpp  thumb_instructions.cpp  thumb_instructions.hpp
src/dma/: dma.cpp  dma.hpp
src/input/: input.cpp  input.hpp
src/interrupt/: interrupt.cpp  interrupt.hpp
src/memory/: bus.cpp  bus.hpp  flash.cpp  flash.hpp
src/ppu/: ppu.cpp  ppu.hpp
src/rtc/: rtc.cpp  rtc.hpp
src/timer/: timer.cpp  timer.hpp
src/ui/: font.hpp  menu.cpp  menu.hpp
tools/: headless_test.cpp  sprite_debug.cpp
